# xray

./: Cargo.toml
memo_core/src/: buffer.rs  epoch.rs  lib.rs  work_tree.rs
memo_js/src/: lib.rs
memo_js/test/: tests.ts
xray_browser/: package.json
xray_browser/src/: ui.js  worker.js
xray_browser/static/: index.html
xray_core/: Cargo.toml
xray_core/src/: app.rs  buffer.rs  buffer_view.rs  change_observer.rs  cross_platform.rs  discussion.rs  fs.rs  fuzzy.rs  git.rs  lib.rs  movement.rs  network.rs  project.rs  storage.rs  stream_ext.rs  window.rs  work_tree.rs  workspace.rs
xray_core/src/rpc/: client.rs  mod.rs  server.rs
xray_core/src/views/: buffer.rs  file_finder.rs  mod.rs  workspace.rs
xray_electron/: package.json
xray_electron/lib/render_process/: main.js
xray_rpc/: Cargo.toml
xray_rpc/src/: client.rs  lib.rs  messages.rs  server.rs  stream_ext.rs
xray_server/: Cargo.toml
xray_server/src/: database.rs  fs.rs  git.rs  json_lines_codec.rs  main.rs  messages.rs  network.rs  server.rs
xray_shared/: Cargo.toml
xray_shared/src/: lib.rs  notify_cell.rs  usize_map.rs  weak_set.rs
xray_ui/: package.json
xray_ui/lib/: app.js  workspace.js
xray_ui/lib/text_editor/: text_editor.js  text_plane.js
xray_wasm/: Cargo.toml
xray_wasm/lib/: support.js
xray_wasm/src/: lib.rs
