[package]
name = "xray_server"
version = "0.1.0"
authors = ["Nathan Sobo <nathan@github.com>"]

[dependencies]
bytes = "0.4"
futures = "0.1"
futures-cpupool = "0.1"
git2 = "0.7"
ignore = { git = "https://github.com/atom/ripgrep", branch = "include_ignored" }
parking_lot = "0.5"
rand = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio-io = "0.1.6"
tokio-core = "0.1.7"
tokio-process = "0.1.5"
tokio-uds = "0.1"
uuid = { version = "0.7", features = ["v4"] }
xray_core = {path = "../xray_core"}
