[package]
name = "xray_wasm"
version = "0.1.0"
authors = ["Antonio Scandurra <as-cii@github.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
bytes = "0.4"
futures = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
wasm-bindgen-futures = "0.3"
js-sys = "0.3.2"
xray_core = { path = "../xray_core" }

[dependencies.web-sys]
version = "0.3"
features = [
  "Window"
]


[dependencies.wasm-bindgen]
version = "0.2"
features = ["serde-serialize"]

[features]
js-tests = []
