[package]
name = "xray_wasm"
version = "0.1.0"
authors = ["Antonio Scandurra <as-cii@github.com>", "Federico Dionisi <mail@fdionisi.me>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
bytes = "0.4"
console_error_panic_hook = "0.1"
futures = "0.1"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
uuid = { version = "0.7.4", features = ["wasm-bindgen"] }
wasm-bindgen = "0.2"
xray_core = { path = "../xray_core" }

[features]
js-tests = []
